# clockodo-api-client

./: .gitignore  README.md  pyproject.toml
.github/workflows/: quality.yml
openspec/changes/archive/2026-03-24-build-python-clockodo-v2-client/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-24-build-python-clockodo-v2-client/specs/client-runtime/: spec.md
openspec/changes/archive/2026-03-24-build-python-clockodo-v2-client/specs/error-handling-and-validation/: spec.md
openspec/changes/archive/2026-03-24-build-python-clockodo-v2-client/specs/typed-v2-endpoints/: spec.md
openspec/changes/archive/2026-03-24-document-library-usage/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-24-predeclare-client-resource-attributes/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-24-support-uv-package-consumption/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-26-add-syntax-and-format-ci/: design.md  proposal.md  tasks.md
openspec/specs/client-runtime/: spec.md
openspec/specs/error-handling-and-validation/: spec.md
openspec/specs/library-usage-documentation/: spec.md
openspec/specs/repository-quality-automation/: spec.md
openspec/specs/typed-client-attributes/: spec.md
openspec/specs/typed-v2-endpoints/: spec.md
openspec/specs/uv-package-consumption/: spec.md
scripts/: validate_uv_package_consumption.sh
src/clockodo_api_lib/: __init__.py  client.py  config.py  exceptions.py  inventory.py  models.py  pagination.py  resources.py  transport.py
tests/: test_client.py
(+4 files in other folders)
